generator client {
  provider = "prisma-client-js"
}

generator dbml {
  provider = "prisma-dbml-generator"
}

datasource db {
  provider = "postgresql"
  url      = env("DATABASE_URL")
}

enum Role {
  OWNER
  ADMIN
  STUDENT
}

enum RecordStatus {
  PLANNED
  IN_PROGRESS
  COMPLETED
  BLOCKED
  ARCHIVED
}

enum Difficulty {
  BEGINNER
  INTERMEDIATE
  ADVANCED
  EXPERT
}

enum LabPlatform {
  HACK_THE_BOX
  TRY_HACK_ME
  PORTSWIGGER
  DOCKER_LABS
  LOCAL_LAB
}

enum LabCategory {
  LINUX
  WINDOWS
  WEB
  ACTIVE_DIRECTORY
  CLOUD
  NETWORK
}

enum WriteupCategory {
  LINUX
  WINDOWS
  WEB
  ACTIVE_DIRECTORY
  CLOUD
  NETWORK
}

enum WriteupVisibility {
  PRIVATE
  INTERNAL
  PUBLIC
}

enum SiemAlertStatus {
  OPEN
  ACKNOWLEDGED
  CLOSED
}

enum SiemEventCategory {
  AUTHENTICATION
  NETWORK
  SYSTEM
  APPLICATION
  ENDPOINT
  AUDIT
}

model User {
  id            String         @id @default(cuid())
  name          String
  email         String         @unique
  passwordHash  String
  role          Role           @default(STUDENT)
  createdAt     DateTime       @default(now())
  updatedAt     DateTime       @updatedAt
  studySessions StudySession[]
  goals         Goal[]
  courses       LearningCourse[]
  labs          LabEntry[]
  certifications Certification[]
  projects      Project[]
  notes         KnowledgeNote[]
  writeups      Writeup[]
  siemEvents    SiemEvent[]
  siemRules     SiemRule[]
  siemAlerts    SiemAlert[]
  assets        Asset[]
  virtualMachines VirtualMachine[]
  networks      Network[]
  services      Service[]
  audits        AuditLog[]
}

model StudySession {
  id         String   @id @default(cuid())
  userId     String
  startedAt  DateTime
  endedAt    DateTime
  focusArea  String
  notes      String?
  minutes    Int
  createdAt  DateTime @default(now())
  updatedAt  DateTime @updatedAt
  user       User     @relation(fields: [userId], references: [id], onDelete: Cascade)

  @@index([userId, startedAt])
}

model Goal {
  id          String       @id @default(cuid())
  userId      String
  title       String
  description String?
  dueDate     DateTime?
  status      RecordStatus @default(PLANNED)
  progress    Int          @default(0)
  createdAt   DateTime     @default(now())
  updatedAt   DateTime     @updatedAt
  user        User         @relation(fields: [userId], references: [id], onDelete: Cascade)

  @@index([userId, status])
}

model KnowledgeNote {
  id          String   @id @default(cuid())
  userId      String
  title       String
  category    String
  tags        String[]
  contentMd   String
  links       String[]
  createdAt   DateTime @default(now())
  updatedAt   DateTime @updatedAt
  user        User     @relation(fields: [userId], references: [id], onDelete: Cascade)

  @@index([userId, category])
}

model LearningCourse {
  id          String           @id @default(cuid())
  userId      String
  title       String
  category    String
  status      RecordStatus     @default(IN_PROGRESS)
  score       Float?
  progress    Int              @default(0)
  minutes     Int              @default(0)
  startedAt   DateTime?
  completedAt DateTime?
  createdAt   DateTime         @default(now())
  updatedAt   DateTime         @updatedAt
  user        User             @relation(fields: [userId], references: [id], onDelete: Cascade)
  modules     LearningModule[]

  @@index([userId, category])
}

model LearningModule {
  id          String         @id @default(cuid())
  courseId    String
  title       String
  order       Int
  progress    Int            @default(0)
  createdAt   DateTime       @default(now())
  updatedAt   DateTime       @updatedAt
  course      LearningCourse @relation(fields: [courseId], references: [id], onDelete: Cascade)
  lessons     LessonProgress[]

  @@unique([courseId, order])
}

model LessonProgress {
  id          String         @id @default(cuid())
  moduleId    String
  title       String
  status      RecordStatus   @default(PLANNED)
  score       Float?
  date        DateTime?
  minutes     Int            @default(0)
  notes       String?
  createdAt   DateTime       @default(now())
  updatedAt   DateTime       @updatedAt
  module      LearningModule @relation(fields: [moduleId], references: [id], onDelete: Cascade)
}

model LabEntry {
  id          String       @id @default(cuid())
  userId      String
  title       String
  platform    LabPlatform
  category    LabCategory
  difficulty  Difficulty
  status      RecordStatus @default(IN_PROGRESS)
  notes       String?
  completedAt DateTime?
  createdAt   DateTime     @default(now())
  updatedAt   DateTime     @updatedAt
  user        User         @relation(fields: [userId], references: [id], onDelete: Cascade)

  @@index([userId, platform])
  @@index([userId, category])
  @@index([userId, status])
}

model Writeup {
  id          String            @id @default(cuid())
  userId      String
  title       String
  slug        String            @unique
  content     String
  tags        String[]
  category    WriteupCategory
  visibility  WriteupVisibility @default(PRIVATE)
  createdAt   DateTime          @default(now())
  updatedAt   DateTime          @updatedAt
  user        User              @relation(fields: [userId], references: [id], onDelete: Cascade)

  @@index([userId, category])
  @@index([userId, visibility])
}

model Certification {
  id             String       @id @default(cuid())
  userId         String
  name           String
  provider       String
  status         RecordStatus @default(PLANNED)
  startDate      DateTime?
  targetDate     DateTime?
  completionDate DateTime?
  progress       Int          @default(0)
  notes          String?
  evidenceUrl    String?
  createdAt      DateTime     @default(now())
  updatedAt      DateTime     @updatedAt
  user           User         @relation(fields: [userId], references: [id], onDelete: Cascade)

  @@index([userId, provider])
  @@index([userId, status])
}

model Project {
  id          String       @id @default(cuid())
  userId      String
  name        String
  technologies String[]
  status      RecordStatus @default(IN_PROGRESS)
  priority    Int          @default(3)
  startDate   DateTime?
  dueDate     DateTime?
  evidenceUrl String?
  createdAt   DateTime     @default(now())
  updatedAt   DateTime     @updatedAt
  user        User         @relation(fields: [userId], references: [id], onDelete: Cascade)

  @@index([userId, status])
}

model ToolkitReport {
  id          String   @id @default(cuid())
  toolName    String
  input       String
  output      String
  createdAt   DateTime @default(now())
}

model SiemEvent {
  id          String            @id @default(cuid())
  userId      String
  source      String
  category    SiemEventCategory
  severity    Int
  timestamp   DateTime
  description String
  createdAt   DateTime          @default(now())
  updatedAt   DateTime          @updatedAt
  user        User              @relation(fields: [userId], references: [id], onDelete: Cascade)
  alerts      SiemAlert[]

  @@index([userId, category])
  @@index([userId, severity])
  @@index([userId, timestamp])
}

model SiemRule {
  id          String      @id @default(cuid())
  userId      String
  name        String
  condition   String
  severity    Int
  enabled     Boolean     @default(true)
  createdAt   DateTime    @default(now())
  updatedAt   DateTime    @updatedAt
  user        User        @relation(fields: [userId], references: [id], onDelete: Cascade)
  alerts      SiemAlert[]

  @@index([userId, severity])
  @@index([userId, enabled])
}

model SiemAlert {
  id          String          @id @default(cuid())
  userId      String
  eventId     String
  ruleId      String?
  title       String
  severity    Int
  status      SiemAlertStatus @default(OPEN)
  createdAt   DateTime        @default(now())
  updatedAt   DateTime        @updatedAt
  user        User            @relation(fields: [userId], references: [id], onDelete: Cascade)
  event       SiemEvent       @relation(fields: [eventId], references: [id], onDelete: Cascade)
  rule        SiemRule?       @relation(fields: [ruleId], references: [id], onDelete: SetNull)

  @@index([userId, status])
  @@index([userId, severity])
  @@index([eventId, status])
}

model Asset {
  id               String           @id @default(cuid())
  userId           String
  networkId        String?
  name             String
  type             String
  manufacturer     String?
  operatingSystem  String?
  ipAddress        String?
  notes            String?
  createdAt        DateTime         @default(now())
  updatedAt        DateTime         @updatedAt
  user             User             @relation(fields: [userId], references: [id], onDelete: Cascade)
  network          Network?         @relation(fields: [networkId], references: [id], onDelete: SetNull)
  services         Service[]
  virtualMachines  VirtualMachine[]

  @@index([userId, type])
  @@index([userId, networkId])
}

model VirtualMachine {
  id          String    @id @default(cuid())
  userId      String
  assetId     String?
  networkId   String?
  name        String
  os          String
  resources   String
  hypervisor  String
  createdAt   DateTime  @default(now())
  updatedAt   DateTime  @updatedAt
  user        User      @relation(fields: [userId], references: [id], onDelete: Cascade)
  asset       Asset?    @relation(fields: [assetId], references: [id], onDelete: SetNull)
  network     Network?  @relation(fields: [networkId], references: [id], onDelete: SetNull)

  @@index([userId, hypervisor])
  @@index([userId, networkId])
}

model Network {
  id               String           @id @default(cuid())
  userId           String
  name             String
  subnet           String
  gateway          String?
  notes            String?
  createdAt        DateTime         @default(now())
  updatedAt        DateTime         @updatedAt
  user             User             @relation(fields: [userId], references: [id], onDelete: Cascade)
  assets           Asset[]
  virtualMachines  VirtualMachine[]

  @@index([userId, name])
}

model Service {
  id          String    @id @default(cuid())
  userId      String
  assetId     String
  name        String
  protocol    String
  port        Int
  createdAt   DateTime  @default(now())
  updatedAt   DateTime  @updatedAt
  user        User      @relation(fields: [userId], references: [id], onDelete: Cascade)
  asset       Asset     @relation(fields: [assetId], references: [id], onDelete: Cascade)

  @@index([userId, protocol])
  @@index([assetId, port])
}

model AuditLog {
  id          String   @id @default(cuid())
  userId      String?
  action      String
  resource    String
  resourceId  String?
  ipAddress   String?
  userAgent   String?
  createdAt   DateTime @default(now())
  user        User?    @relation(fields: [userId], references: [id], onDelete: SetNull)

  @@index([createdAt])
}
