//// ------------------------------------------------------
//// THIS FILE WAS AUTOMATICALLY GENERATED (DO NOT MODIFY)
//// ------------------------------------------------------

Table User {
  id String [pk]
  name String [not null]
  email String [unique, not null]
  passwordHash String [not null]
  role Role [not null, default: 'STUDENT']
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [not null]
  studySessions StudySession [not null]
  goals Goal [not null]
  courses LearningCourse [not null]
  labs LabEntry [not null]
  certifications Certification [not null]
  projects Project [not null]
  notes KnowledgeNote [not null]
  writeups Writeup [not null]
  siemEvents SiemEvent [not null]
  siemRules SiemRule [not null]
  siemAlerts SiemAlert [not null]
  assets Asset [not null]
  virtualMachines VirtualMachine [not null]
  networks Network [not null]
  services Service [not null]
  audits AuditLog [not null]
}

Table StudySession {
  id String [pk]
  userId String [not null]
  startedAt DateTime [not null]
  endedAt DateTime [not null]
  focusArea String [not null]
  notes String
  minutes Int [not null]
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [not null]
  user User [not null]
}

Table Goal {
  id String [pk]
  userId String [not null]
  title String [not null]
  description String
  dueDate DateTime
  status RecordStatus [not null, default: 'PLANNED']
  progress Int [not null, default: 0]
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [not null]
  user User [not null]
}

Table KnowledgeNote {
  id String [pk]
  userId String [not null]
  title String [not null]
  category String [not null]
  tags String[] [not null]
  contentMd String [not null]
  links String[] [not null]
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [not null]
  user User [not null]
}

Table LearningCourse {
  id String [pk]
  userId String [not null]
  title String [not null]
  category String [not null]
  status RecordStatus [not null, default: 'IN_PROGRESS']
  score Float
  progress Int [not null, default: 0]
  minutes Int [not null, default: 0]
  startedAt DateTime
  completedAt DateTime
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [not null]
  user User [not null]
  modules LearningModule [not null]
}

Table LearningModule {
  id String [pk]
  courseId String [not null]
  title String [not null]
  order Int [not null]
  progress Int [not null, default: 0]
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [not null]
  course LearningCourse [not null]
  lessons LessonProgress [not null]

  indexes {
    (courseId, order) [unique]
  }
}

Table LessonProgress {
  id String [pk]
  moduleId String [not null]
  title String [not null]
  status RecordStatus [not null, default: 'PLANNED']
  score Float
  date DateTime
  minutes Int [not null, default: 0]
  notes String
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [not null]
  module LearningModule [not null]
}

Table LabEntry {
  id String [pk]
  userId String [not null]
  title String [not null]
  platform LabPlatform [not null]
  category LabCategory [not null]
  difficulty Difficulty [not null]
  status RecordStatus [not null, default: 'IN_PROGRESS']
  notes String
  completedAt DateTime
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [not null]
  user User [not null]
}

Table Writeup {
  id String [pk]
  userId String [not null]
  title String [not null]
  slug String [unique, not null]
  content String [not null]
  tags String[] [not null]
  category WriteupCategory [not null]
  visibility WriteupVisibility [not null, default: 'PRIVATE']
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [not null]
  user User [not null]
}

Table Certification {
  id String [pk]
  userId String [not null]
  name String [not null]
  provider String [not null]
  status RecordStatus [not null, default: 'PLANNED']
  startDate DateTime
  targetDate DateTime
  completionDate DateTime
  progress Int [not null, default: 0]
  notes String
  evidenceUrl String
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [not null]
  user User [not null]
}

Table Project {
  id String [pk]
  userId String [not null]
  name String [not null]
  technologies String[] [not null]
  status RecordStatus [not null, default: 'IN_PROGRESS']
  priority Int [not null, default: 3]
  startDate DateTime
  dueDate DateTime
  evidenceUrl String
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [not null]
  user User [not null]
}

Table ToolkitReport {
  id String [pk]
  toolName String [not null]
  input String [not null]
  output String [not null]
  createdAt DateTime [default: `now()`, not null]
}

Table SiemEvent {
  id String [pk]
  userId String [not null]
  source String [not null]
  category SiemEventCategory [not null]
  severity Int [not null]
  timestamp DateTime [not null]
  description String [not null]
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [not null]
  user User [not null]
  alerts SiemAlert [not null]
}

Table SiemRule {
  id String [pk]
  userId String [not null]
  name String [not null]
  condition String [not null]
  severity Int [not null]
  enabled Boolean [not null, default: true]
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [not null]
  user User [not null]
  alerts SiemAlert [not null]
}

Table SiemAlert {
  id String [pk]
  userId String [not null]
  eventId String [not null]
  ruleId String
  title String [not null]
  severity Int [not null]
  status SiemAlertStatus [not null, default: 'OPEN']
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [not null]
  user User [not null]
  event SiemEvent [not null]
  rule SiemRule
}

Table Asset {
  id String [pk]
  userId String [not null]
  networkId String
  name String [not null]
  type String [not null]
  manufacturer String
  operatingSystem String
  ipAddress String
  notes String
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [not null]
  user User [not null]
  network Network
  services Service [not null]
  virtualMachines VirtualMachine [not null]
}

Table VirtualMachine {
  id String [pk]
  userId String [not null]
  assetId String
  networkId String
  name String [not null]
  os String [not null]
  resources String [not null]
  hypervisor String [not null]
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [not null]
  user User [not null]
  asset Asset
  network Network
}

Table Network {
  id String [pk]
  userId String [not null]
  name String [not null]
  subnet String [not null]
  gateway String
  notes String
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [not null]
  user User [not null]
  assets Asset [not null]
  virtualMachines VirtualMachine [not null]
}

Table Service {
  id String [pk]
  userId String [not null]
  assetId String [not null]
  name String [not null]
  protocol String [not null]
  port Int [not null]
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [not null]
  user User [not null]
  asset Asset [not null]
}

Table AuditLog {
  id String [pk]
  userId String
  action String [not null]
  resource String [not null]
  resourceId String
  ipAddress String
  userAgent String
  createdAt DateTime [default: `now()`, not null]
  user User
}

Enum Role {
  OWNER
  ADMIN
  STUDENT
}

Enum RecordStatus {
  PLANNED
  IN_PROGRESS
  COMPLETED
  BLOCKED
  ARCHIVED
}

Enum Difficulty {
  BEGINNER
  INTERMEDIATE
  ADVANCED
  EXPERT
}

Enum LabPlatform {
  HACK_THE_BOX
  TRY_HACK_ME
  PORTSWIGGER
  DOCKER_LABS
  LOCAL_LAB
}

Enum LabCategory {
  LINUX
  WINDOWS
  WEB
  ACTIVE_DIRECTORY
  CLOUD
  NETWORK
}

Enum WriteupCategory {
  LINUX
  WINDOWS
  WEB
  ACTIVE_DIRECTORY
  CLOUD
  NETWORK
}

Enum WriteupVisibility {
  PRIVATE
  INTERNAL
  PUBLIC
}

Enum SiemAlertStatus {
  OPEN
  ACKNOWLEDGED
  CLOSED
}

Enum SiemEventCategory {
  AUTHENTICATION
  NETWORK
  SYSTEM
  APPLICATION
  ENDPOINT
  AUDIT
}

Ref: StudySession.userId > User.id [delete: Cascade]

Ref: Goal.userId > User.id [delete: Cascade]

Ref: KnowledgeNote.userId > User.id [delete: Cascade]

Ref: LearningCourse.userId > User.id [delete: Cascade]

Ref: LearningModule.courseId > LearningCourse.id [delete: Cascade]

Ref: LessonProgress.moduleId > LearningModule.id [delete: Cascade]

Ref: LabEntry.userId > User.id [delete: Cascade]

Ref: Writeup.userId > User.id [delete: Cascade]

Ref: Certification.userId > User.id [delete: Cascade]

Ref: Project.userId > User.id [delete: Cascade]

Ref: SiemEvent.userId > User.id [delete: Cascade]

Ref: SiemRule.userId > User.id [delete: Cascade]

Ref: SiemAlert.userId > User.id [delete: Cascade]

Ref: SiemAlert.eventId > SiemEvent.id [delete: Cascade]

Ref: SiemAlert.ruleId > SiemRule.id [delete: Set Null]

Ref: Asset.userId > User.id [delete: Cascade]

Ref: Asset.networkId > Network.id [delete: Set Null]

Ref: VirtualMachine.userId > User.id [delete: Cascade]

Ref: VirtualMachine.assetId > Asset.id [delete: Set Null]

Ref: VirtualMachine.networkId > Network.id [delete: Set Null]

Ref: Network.userId > User.id [delete: Cascade]

Ref: Service.userId > User.id [delete: Cascade]

Ref: Service.assetId > Asset.id [delete: Cascade]

Ref: AuditLog.userId > User.id [delete: Set Null]